--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Alternative controller based on reefcentral forums
+This version has blue and white LED channels, auto top off, heater and fan relay control, and passing clouds.
